--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-stripmq": "0.0.5",
     "grunt-css-mqpacker": "~0.1.3",
     "grunt-remfallback": "0.0.5",
-    "grunt-responsive-images": "~0.1.3"
+    "grunt-responsive-images": "~0.1.3",
+    "grunt-contrib-sass": "~0.7.3"
   }
 }
