--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-responsive-images": "~0.1.3",
     "grunt-stripmq": "0.0.5",
     "grunt-svgmin": "~0.3.0",
-    "grunt-pixrem": "~0.1.2"
+    "grunt-pixrem": "~0.1.2",
+    "grunt-contrib-imagemin": "~0.8.1"
   }
 }
