added build path to package.json

--- a/root/package.json
+++ b/root/package.json
@@ -15,6 +15,7 @@
   		}
   	],
   	"assetsFolder": "assets",
+  	"buildFolder": "assets/_build",
   	"devDependencies": {
 	    "grunt": "~0.4.2",
 	    "grunt-autoprefixer": "~0.7.3",
